--- a/i18n/de/Long Description.html
+++ b/i18n/de/Long Description.html
@@ -1,5 +1,5 @@
 <p>
-    Wenn Ihre Organisation die Vorteile des einfachen Teilens von Daten und die gemeinsame Arbeit online mit diesen Daten wahrnehmen möchte, wie sie von vielen Cloud Anbietern geboten wird, jedoch die Anforderung haben die Kontrolle zu behalten und nicht authorisiertem Zugriff vorzubeugen, dann bietet Nextcloud die Lösung nach der Sie suchen.
+    Wenn Ihre Organisation die Vorteile des einfachen Teilens von Daten und die gemeinsame Arbeit online mit diesen Daten wahrnehmen möchte, wie sie von vielen Cloud Anbietern geboten wird, jedoch die Anforderung haben die Kontrolle zu behalten und nicht autorisiertem Zugriff vorzubeugen, dann bietet Nextcloud die Lösung nach der Sie suchen.
 </p>
 <p>
     Nextcloud bietet die in der Branche einzig vollständige Open Source Lösung für die On-Premise Datenhaltung und Kommunikation mit einem kompromisslosen Fokus auf Sicherheit und Datenschutz.
@@ -23,16 +23,16 @@
         Einfache Zusammenarbeit und Dateiaustausch intern wie extern mit optionalen Vorgaben wie Passwortschutz und Auslaufdatum.
     </li>
     <li>
-        Eingebauter Audio und Video Chat, optional kollaboratives Bearbeiten von Office Dokumenten, Outlook Integration and mehr
+        Eingebauter Audio und Video Chat, optional kollaboratives Bearbeiten von Office Dokumenten, Outlook Integration und mehr
     </li>
     <li>
-        Unterstützung für externe Datenspiecher wie Windows Network Drive, FTP, WebDAV, NFS und weitere
+        Unterstützung für externe Datenspeicher wie Windows Network Drive, FTP, WebDAV, NFS und weitere
     </li>
     <li>
-        Zahlreiche passive und active Sicherheitsfunktionen wie 2-Faktor Authentifizierung, Brute Force Schutz und CSP 3.0 als auch einen Auditlog
+        Zahlreiche passive und aktive Sicherheitsfunktionen wie 2-Faktor Authentifizierung, Brute Force Schutz und CSP 3.0 als auch einen Auditlog
     </li>
     <li>
-        Volle administrative Kontrolle über Dateiaustausch mittel File Access Control Regeln wie beispielsweise &quot;DOCX darf nur aus dem internen Netzwerk heruntergeladen werden&quot; oder ausgeführte Aktionen bei bestimmten Aktionen (z.B. das Setzen von Schlagwörtern)
+        Volle administrative Kontrolle über Dateiaustausch mittels File Access Control Regeln wie beispielsweise &quot;DOCX darf nur aus dem internen Netzwerk heruntergeladen werden&quot; oder ausgeführte Aktionen bei bestimmten Aktionen (z.B. das Setzen von Schlagwörtern)
     </li>
 </ul>
 Hier erfahren Sie mehr über den <a href="https://nextcloud.com/features" target="_blank">Funktionsumfang von Nextcloud</a>.
@@ -42,7 +42,7 @@ Hier erfahren Sie mehr über den <a href="https://nextcloud.com/features" target
     Vergleich
 </h3>
 <p>
-    Verglichen mit anderen privaten Cloud-Lösungen bietet Nextcloud stärkere, eingebaute Sicherheitsmaßnahmen, wie etwas 2-Faktor Authentifizierung, Brute Force Schutz, und <a href="https://nextcloud.com/secure" target="_blank">vielen weiteren Schutzvorkehrungen</a>. Es ist vollständig Open Source und das am <a href="https://nextcloud.com/blog/nextcloud-the-most-active-open-source-file-sync-and-share-project/" target="_blank">aktivsten entwickelte Dateisynchronisations und Dateiaustausch-Projekt</a>.
+    Verglichen mit anderen privaten Cloud-Lösungen bietet Nextcloud stärkere, eingebaute Sicherheitsmaßnahmen, wie etwas 2-Faktor Authentifizierung, Brute Force Schutz, und <a href="https://nextcloud.com/secure" target="_blank">vielen weiteren Schutzvorkehrungen</a>. Es ist vollständig Open Source und das am <a href="https://nextcloud.com/blog/nextcloud-the-most-active-open-source-file-sync-and-share-project/" target="_blank">aktivsten entwickelte Dateisynchronisation und Dateiaustausch-Projekt</a>.
 </p>
 <p>
     Erfahren Sie <a href="https://nextcloud.com/migration" target="_blank">hier mehr über die Migration von anderen Lösungen auf Nextcloud</a>.
