--- a/i18n/de/README_UNINSTALL.html
+++ b/i18n/de/README_UNINSTALL.html
@@ -2,5 +2,5 @@
 Die Deinstallation von Nextcloud wird ebenfalls alle Daten entfernen.
 </p>
 <p>
-Falls diese behalten werden sollen, sollte ein Backup der <i>nextcloud</i> Datenbank aus PostgreSQL sowie vom Datenordner <i>/var/lib/univention-appcenter/apps/nextcloud/data</i> angelegt werden, before mit der Deinstallation fortgefahren wird.
+Falls diese behalten werden sollen, sollte ein Backup der <i>nextcloud</i> Datenbank aus PostgreSQL sowie vom Datenordner <i>/var/lib/univention-appcenter/apps/nextcloud/data</i> angelegt werden, bevor mit der Deinstallation fortgefahren wird.
 </p>
