--- a/i18n/de/Short Description.html
+++ b/i18n/de/Short Description.html
@@ -1,1 +1,1 @@
-Der sicherste Weg Daten in und außerhalb Ihrer Organisation zu speichern, synchronisieren & teilen.
+Der sicherste Weg, Daten in und außerhalb Ihrer Organisation zu speichern, synchronisieren & teilen.
