--- a/i18n/de/README_INSTALL.html
+++ b/i18n/de/README_INSTALL.html
@@ -1,5 +1,5 @@
 <p>
-Nextcloud bietet die Möglichkeit an LDAP Gruppen aus UCS zu verwenden. Dies vereinfacht es z.B. Ordner für eine Gruppe von Leuten bereit zu stellen. Um eine bestimmte Gruppe einzubeziehen, können diese aus Ihren erweiterten Einstellungen in UCS heraus für Nextcloud freigegeben werden. Um eine signifikante bessere Performance zu erhalten, sollte vor der Nextcloud-Installation das Paket univention-ldap-overlay-memberof in der Paketverwaltung installiert werden.
+Nextcloud bietet die Möglichkeit, LDAP Gruppen aus UCS zu verwenden. Dies vereinfacht es zum Beispiel, Ordner für eine Gruppe von Leuten bereit zu stellen. Um eine bestimmte Gruppe einzubeziehen, können diese aus ihren erweiterten Einstellungen in UCS heraus für Nextcloud freigegeben werden. Um eine signifikant bessere Performance zu erhalten, sollte vor der Nextcloud-Installation das Paket univention-ldap-overlay-memberof in der Paketverwaltung installiert werden.
 </p>
 <p>
 Falls im Host Webserver HTTP Strict Transport Security nicht eingeschaltet sein sollte, so ist diese Einrichtung zu empfehlen. Weitere Informationen dazu befinden sich in der <a href="https://docs.nextcloud.com/server/11/admin_manual/configuration_server/harden_server.html#enable-http-strict-transport-security" target="_blank">Dokumentation</a>.
