--- a/i18n/de/Long Description.html
+++ b/i18n/de/Long Description.html
@@ -1,14 +1,14 @@
 <p>
-    Wenn Ihre Organisation die Vorteile des einfachen Teilens von Daten und die gemeinsame Arbeit online mit diesen Daten wahrnehmen möchte, wie sie von vielen Cloud Anbietern geboten wird, jedoch die Anforderung haben die Kontrolle zu behalten und nicht autorisiertem Zugriff vorzubeugen, dann bietet Nextcloud die Lösung nach der Sie suchen.
+    Wenn Ihre Organisation von den Vorteilen des einfachen Teilens von Daten und der Online-Kollaboration profitieren möchte, wie es von vielen Cloud-Produkten angeboten wird, Sie jedoch die Anforderung haben, die Kontrolle zu behalten und nicht autorisiertem Zugriff vorzubeugen, dann bietet Nextcloud die Lösung, nach der Sie suchen.
 </p>
 <p>
-    Nextcloud bietet die in der Branche einzig vollständige Open Source Lösung für die On-Premise Datenhaltung und Kommunikation mit einem kompromisslosen Fokus auf Sicherheit und Datenschutz.
+    Nextcloud bietet die in der Branche einzigartige vollständige Open Source Lösung für On-Premise Datenverarbeitung und Kommunikation mit einem kompromisslosen Fokus auf Sicherheit und Datenschutz.
 </p>
 <h2>
     Funktionsumfang
 </h2>
 <p>
-    Nextcloud vereinigt universellen Datenzugriff mit sicheren Kommunikations- und Kollaborationsmöglichkeiten der nächsten Generation unter der direkten Kontrolle Ihrer IT, integriert in die bestehende Infrastruktur. Nextclouds offene, modulare Architektur, die Betonung der Sicherheit und die fortgeschrittenen Fähigkeiten zur Föderation ermöglichen es modernen Unternehmen ihre bestehendes IT Kapital innerhalb und über die Grenzen Ihrer Organisation hinaus auszureizen.
+    Nextcloud vereinigt universellen Datenzugriff mit sicheren Kommunikations- und Kollaborationsmöglichkeiten der nächsten Generation unter direkter Kontrolle Ihrer IT, integriert in die bestehende Infrastruktur. Nextclouds offene, modulare Architektur, die Ausrichtung auf Sicherheit und die fortgeschrittenen Fähigkeiten zur Föderation ermöglichen es modernen Unternehmen, ihr bestehendes IT Kapital innerhalb und über die Grenzen ihrer Organisation hinaus auszureizen.
 </p>
 <h3>
     Features:
@@ -20,16 +20,16 @@
         Einfach zu bedienende Weboberfläche und Anwendungen für Android, iOS, Windows, Mac und Linux
     </li>
     <li>
-        Einfache Zusammenarbeit und Dateiaustausch intern wie extern mit optionalen Vorgaben wie Passwortschutz und Auslaufdatum.
+        Einfache Zusammenarbeit und Dateiaustausch intern wie extern mit optionalen Vorgaben wie Passwortschutz und Auslaufdatum
     </li>
     <li>
-        Eingebauter Audio und Video Chat, optional kollaboratives Bearbeiten von Office Dokumenten, Outlook Integration und mehr
+        Eingebauter Audio- und Video-Chat, optional kollaboratives Bearbeiten von Office-Dokumenten, Outlook Integration und mehr
     </li>
     <li>
-        Unterstützung für externe Datenspeicher wie Windows Network Drive, FTP, WebDAV, NFS und weitere
+        Unterstützung externer Datenspeicher wie Windows Network Drive, FTP, WebDAV, NFS und weitere
     </li>
     <li>
-        Zahlreiche passive und aktive Sicherheitsfunktionen wie 2-Faktor Authentifizierung, Brute Force Schutz und CSP 3.0 als auch einen Auditlog
+        Zahlreiche passive und aktive Sicherheitsfunktionen wie 2-Faktor-Authentifizierung, Brute-Force-Schutz und CSP 3.0 als auch einen Auditlog
     </li>
     <li>
         Volle administrative Kontrolle über Dateiaustausch mittels File Access Control Regeln wie beispielsweise &quot;DOCX darf nur aus dem internen Netzwerk heruntergeladen werden&quot; oder ausgeführte Aktionen bei bestimmten Aktionen (z.B. das Setzen von Schlagwörtern)
@@ -42,13 +42,13 @@ Hier erfahren Sie mehr über den <a href="https://nextcloud.com/features" target
     Vergleich
 </h3>
 <p>
-    Verglichen mit anderen privaten Cloud-Lösungen bietet Nextcloud stärkere, eingebaute Sicherheitsmaßnahmen, wie etwas 2-Faktor Authentifizierung, Brute Force Schutz, und <a href="https://nextcloud.com/secure" target="_blank">vielen weiteren Schutzvorkehrungen</a>. Es ist vollständig Open Source und das am <a href="https://nextcloud.com/blog/nextcloud-the-most-active-open-source-file-sync-and-share-project/" target="_blank">aktivsten entwickelte Dateisynchronisation und Dateiaustausch-Projekt</a>.
+    Verglichen mit anderen privaten Cloud-Lösungen bietet Nextcloud stärkere eingebaute Sicherheitsmaßnahmen, wie etwa 2-Faktor-Authentifizierung, Brute-Force-Schutz und <a href="https://nextcloud.com/secure" target="_blank">viele weitere Schutzvorkehrungen</a>. Nextcloud ist vollständig Open Source und das am <a href="https://nextcloud.com/blog/nextcloud-the-most-active-open-source-file-sync-and-share-project/" target="_blank">aktivsten entwickelte Dateisynchronisations- und Dateiaustausch-Projekt</a>.
 </p>
 <p>
     Erfahren Sie <a href="https://nextcloud.com/migration" target="_blank">hier mehr über die Migration von anderen Lösungen auf Nextcloud</a>.
 </p>
 <p>
-    Nextcloud zielt auf Organisationen ab 50 bis Millionen von Nutzern ab, einschließlich Branchen wie Bildung, Verwaltung und Behörden, juristische wie finanzielle Dienstleister und Fertigung.
+    Nextcloud zielt auf Organisationen von 50 bis Millionen von Nutzern ab, einschließlich Branchen wie Bildung, Verwaltung und Behörden, juristische wie finanzielle Dienstleister und Fertigung.
 </p>
 Weitere Informationen finden Sie auf <a href="https://nextcloud.com" target="_blank">nextcloud.com</a> oder folgen Sie <a href="https://twitter.com/nextclouders" target="_blank">@Nextclouders auf Twitter</a>.
 <h2>
@@ -74,6 +74,6 @@ Weitere Informationen finden Sie auf <a href="https://nextcloud.com" target="_bl
         Alle Benutzer und Gruppen profitieren vom Nextcloud LDAP Schema
     </li>
     <li>
-        Der Web Server ist voll eingerichtet und steht hinter dem als Reverse Proxy fungierenden und TLS abwickelnden UCS Web Server
+        Der Web Server ist komplett eingerichtet und steht hinter dem als Reverse Proxy fungierenden und TLS abwickelnden UCS Web Server
     </li>
 </ul>
