Update Long Description with E2EE, TU Berlin wp
Adding a bit about encryption option s and the TU Berlin whitepaper

--- a/i18n/en/Long Description.html
+++ b/i18n/en/Long Description.html
@@ -31,11 +31,14 @@
     <li>
         Many passive and active security features like two-factor authentication, brute force protection and CSP 3.0 as well as an audit log
     </li>
+	<li>
+		Optionally server-side encryption (can be chosen per storage) and end-to-end, client-side encryption (can be chosen per folder by the user)
+	</li>
     <li>
         Full admin control over sharing with File Access Control rules like &quot;DOCX can only be downloaded from within local network&quot; or execute actions if certain conditions are met (like a tag is set)
     </li>
 </ul>
-Learn more about <a href="https://nextcloud.com/features" target="_blank">Nextcloud features here.</a>
+Learn more about <a href="https://nextcloud.com/features" target="_blank">Nextcloud features here</a> and check out our offering <a href="https://nextcloud.com/education" target="_blank">for the education market in particular here.</a>
 <p>
 </p>
 <h3>
@@ -48,7 +51,7 @@ Learn more about <a href="https://nextcloud.com/features" target="_blank">Nextcl
     Learn about <a href="https://nextcloud.com/migration" target="_blank">migrating from other solutions to Nextcloud here.</a>
 </p>
 <p>
-    Nextcloud typically targets organizations from 50 to tens of millions of users in industries including education, government, legal and financial services and manufacturing.
+    Nextcloud typically targets organizations from 50 to tens of millions of users in industries including education, government, legal and financial services and manufacturing. Download a <a href="https://nextcloud.com/education" target="_blank">case study of TU Berlin providing Nextcloud to its 22.000 users on this page.</a>
 </p>
 For more information, visit <a href="https://nextcloud.com" target="_blank">nextcloud.com</a> or follow <a href="https://twitter.com/nextclouders" target="_blank">@Nextclouders on Twitter</a>.
 <h2>
