mention the Edu Edition Appliance in the long description

--- a/i18n/en/Long Description.html
+++ b/i18n/en/Long Description.html
@@ -80,3 +80,41 @@ For more information, visit <a href="https://nextcloud.com" target="_blank">next
         Web server fully configured and behind stock UCS web server acting as proxy and doing all TLS magic
     </li>
 </ul>
+
+<h2>
+    Nextcloud Enterprise Edition Appliance
+</h2>
+
+<p>
+    The appliance is driven by the Nextcloud Enterprise Edition. This configuration of Nextcloud ships and enables several applications that are typically used in educational environments like Universities. Those additional apps are:
+</p>
+
+<ul>
+    <li>
+        <strong>Zenodo </strong>: enables users to share and manae their research work using Zenodo.org data repository
+    </li>
+    <li>
+        <strong>Dashboard</strong>: allows users to easily keep an eye on their uploaded files, recent emails, upcoming events, and more
+    </li>
+    <li>
+        <strong>Circles</strong>: permits your users to create their own groups ("circles") of classmates or colleagues
+    </li>
+    <li>
+        <strong>Group folders</strong>: offers admin configured folders shared by everyone in a group
+    </li>
+    <li>
+        <strong>Announcement center</strong>: lets admin communicate service updates to users and groups on the instance
+    </li>
+    <li>
+        <strong>Admin notifications</strong>: empowers admins to generate notifications for users via the console or an HTTP endpoint
+    </li>
+    <li>
+        <strong>Quota warning</strong>: informs users when they reached 85, 90 and 95% of their quota
+    </li>
+    <li>
+        <strong>ORCID</strong>: Displays the user's ORCID researcher ID
+    </li>
+    <li>
+        <strong>SAML</strong>: facilitates integration into the organisation's Single-Sign-On solution
+    </li>
+</ul>
