--- a/i18n/en/Long Description.html
+++ b/i18n/en/Long Description.html
@@ -82,11 +82,11 @@ For more information, visit <a href="https://nextcloud.com" target="_blank">next
 </ul>
 
 <h2>
-    Nextcloud Enterprise Edition Appliance
+    Nextcloud Education Edition Appliance
 </h2>
 
 <p>
-    The appliance is driven by the Nextcloud Enterprise Edition. This configuration of Nextcloud ships and enables several applications that are typically used in educational environments like Universities. Those additional apps are:
+    The appliance is driven by the Nextcloud Education Edition. This configuration of Nextcloud ships and enables several applications that are typically used in educational environments like Universities. Those additional apps are:
 </p>
 
 <ul>
