--- a/i18n/en/Long Description.html
+++ b/i18n/en/Long Description.html
@@ -91,7 +91,7 @@ For more information, visit <a href="https://nextcloud.com" target="_blank">next
 
 <ul>
     <li>
-        <strong>Zenodo </strong>: enables users to share and manae their research work using Zenodo.org data repository
+        <strong>Zenodo </strong>: enables users to share and manage their research work using Zenodo.org data repository
     </li>
     <li>
         <strong>Dashboard</strong>: allows users to easily keep an eye on their uploaded files, recent emails, upcoming events, and more
