Add note about when a new major app update can be expected

--- a/i18n/de/Long Description.html
+++ b/i18n/de/Long Description.html
@@ -80,3 +80,6 @@ Weitere Informationen finden Sie auf <a href="https://nextcloud.com" target="_bl
         Der Web Server ist komplett eingerichtet und steht hinter dem als Reverse Proxy fungierenden und TLS abwickelnden UCS Web Server
     </li>
 </ul>
+<p>
+    Die Nextcloud-App für UCS im Univention App Center basiert auf der neuesten Version aus dem Kanal für stabile Updates von Nextcloud. Major Versionen werden in der Regel innerhalb von 3-6 Monaten nach Veröffentlichung über den stabilen Update-Kanal bereitgestellt. Die App erhält dann auch ein Update im App Center.
+</p>
