--- a/i18n/en/Long Description.html
+++ b/i18n/en/Long Description.html
@@ -80,3 +80,6 @@ For more information, visit <a href="https://nextcloud.com" target="_blank">next
         Web server fully configured and behind stock UCS web server acting as proxy and doing all TLS magic
     </li>
 </ul>
+<p>
+    The Nextcloud app for UCS in Univention App Center is based on the latest release from the Nextcloud stable update channel. Major releases are typically provided in the stable update channel within 3-6 month after release. The app will then also receive an update in the App Center.
+</p>
